--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-spring:
-profiles:
-default:dev
-springdoc:
-swagger-ui:
-disable-swagger-default-url:true
-path:/docs
-application:
-openapi:
-dev-url:http://localhost:8080
-helios-url:http://localhost:18080
-prod-url:http://localhost:80
+spring.application.name=BLPS_lab2
+spring.datasource.url=jdbc:postgresql://localhost:5432/studs
+spring.datasource.username=s334645
+spring.datasource.password=eNiIXg15sQmP6nDf
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.path=/docs
+spring.sql.init.mode=always
+spring.jpa.generate-ddl=true
