fix: now working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=BLPS_lab2
 spring.datasource.url=jdbc:postgresql://localhost:5432/studs
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PWD}
+spring.datasource.username=s334645
+spring.datasource.password=eNiIXg15sQmP6nDf
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.path=/docs
 spring.sql.init.mode=always
