--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
             <artifactId>spring-boot-starter-jta-bitronix</artifactId>
             <version>2.4.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.btm</groupId>
+            <artifactId>btm</artifactId>
+            <version>2.1.4</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
