--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=BLPS_lab2
-spring.datasource.url=jdbc:postgresql://localhost:5432/studs
+spring.datasource.url=jdbc:postgresql://localhost:1180/studs
 spring.datasource.username=s334645
 spring.datasource.password=eNiIXg15sQmP6nDf
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.path=/docs
 spring.sql.init.mode=always
 spring.jpa.generate-ddl=true
+bitronix.tm.serverId=btm-spring-test
+bitronix.tm.journal.disk.logPart1Filename=target/btm1.tlog
+bitronix.tm.journal.disk.logPart2Filename=target/btm2.tlog
+bitronix.tm.timer.gracefulShutdownInterval=10
+bitronix.tm.journal.disk.skipCorruptedLogs=false
+bitronix.tm.journal.disk.filterLogStatus=false
+bitronix.tm.timer.transactionRetryInterval=5
+bitronix.tm.resource.configuration=
